src/app/globals.css
/* ... */
.main-marquee-file {
  margin-top: 4rem;
  position: relative;

  &::after {
    content: "";
    width: 1%;
    height: 100%;
    background-color: rgb(0, 0, 0);
    position: absolute;
    left: -1rem;
    top: 0;
    box-shadow: 20px 0px 20px 30px rgb(255, 255, 255);
    /* border-radius: 0px 20px 20px 0px; */
  }

  &::before {
    content: "";
    width: 1%;
    height: 100%;
    background-color: rgb(0, 0, 0);
    position: absolute;
    right: -1rem;
    top: 0;
    z-index: 1;
    box-shadow: -20px 0px 20px 30px rgb(255, 255, 255);
    /* border-radius: 20px 0px 0px 20px; */
  }

  span {
    font-size: 4rem;
    font-weight: 700;
    color: #ffffff !important;
    opacity: 0.5;
    text-shadow: rgb(0, 0, 0) 1px 0px 0px,
      rgb(0, 0, 0) 0.540302px 0.841471px 0px,
      rgb(0, 0, 0) -0.416147px 0.909297px 0px,
      rgb(0, 0, 0) -0.989992px 0.14112px 0px,
      rgb(0, 0, 0) -0.653644px -0.756802px 0px,
      rgb(0, 0, 0) 0.283662px -0.958924px 0px,
      rgb(0, 0, 0) 0.96017px -0.279415px 0px;
  }
}

#whatsappFloatingButton {
  width: fit-content;
  position: fixed;
  bottom: 2rem;
  right: 2rem;
  z-index: 5000;

  img {
    filter: drop-shadow(0 0 0.25rem rgb(175, 175, 175));
    width: 3.5rem !important;
    height: 3.5rem;
  }
}
#phoneFloatingButton {
  width: fit-content;
  position: fixed;
  bottom: 6rem;
  right: 2rem;
  z-index: 5000;
  background-color: white !important;
  border-radius: 5rem;
  img {
    filter: drop-shadow(0 0 0.25rem rgb(175, 175, 175));
    width: 3rem !important;
    height: 3rem;
    margin: 5px;
  }
}

#quoteFloatingButton {
  width: fit-content;
  position: fixed;
  top: 45%;
  right: -2.25rem;
  z-index: 5000;
  border: 2px solid blue;
  border-radius: 0 0 5px 5px;
  padding: 5px 10px;
  font-family: "Lato";
  background-color: black;
  color: white;
  border: 2px solid black;
  transition: 0.3s;
  box-shadow: 0px 0px 10px 0px gray;
  transform: rotate(90deg);

  &:hover {
    background-color: white;
    color: black;
  }
}

.home-page-why-we-us-section {
  margin-top: 5rem;

  .heading-section {
    margin-bottom: 30px;
    padding: 0 0.75rem;

    p {
      color: #393939;
      font-size: 14px;
      font-family: "Poppins";
      font-weight: 400;
      line-height: 1.5;
      padding-left: 0.5rem;
      margin-top: 15px;
    }
  }

  .container {
    .row {
      > div {
        margin-top: 1.5rem;

        .innerDiv {
          background-color: rgb(252, 252, 252);
          border: 2px solid #dddddd;
          padding: 2rem;
          display: flex;
          flex-direction: column;
          align-items: start;
          justify-content: space-between;
          height: auto;
          border-radius: 20px;
          box-shadow: 0px 10px 20px -12px gray;

          img {
            width: 20%;
          }

          h5 {
            text-transform: capitalize;
            color: #000;
            opacity: 1;
            border: none;
            padding: 5px;
            font-size: 1.5rem;
            font-weight: 500;
          }
        }
      }
    }
  }
}

.services-card-heading {
  margin-top: 0px;
  font-size: 1.25rem;
  font-weight: 700 !important;
  font-family: "Montserrat" !important;
}

.services-card-para {
  color: #515151;
  margin: 0;
  font-family: "Poppins" !important;
  font-weight: 400 !important;
  font-size: 14px !important;
}

p {
  line-height: 30px !important;

  strong {
    line-height: 20px !important;
  }
}

.main-section-heading {
  color: #242424;
  margin: 0;
  padding-left: 0;
  font-size: 1.75rem;
  font-weight: 700;
  margin-bottom: 1 rem;
  position: relative;
  padding-bottom: 1rem;
  font-family: "Lato", sans-serif !important;

  &::after {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 80px;
    height: 3px;
    background: linear-gradient(to right, #00dbde, #fc00ff);
    border-radius: 2px;
  }
}

.inner-heading {
  font-family: "Poppins" !important;
  text-transform: capitalize;
  font-size: 1.15rem;
  font-weight: 500;
  line-height: 30px;
  margin: 0;
  width: 100%;
}
.about-page-main,
.shopify-devlopment-main-page {
  padding-top: 2rem;
}

.swiper-button-next svg {
  object-fit: contain;
  transform-origin: center;
  fill: black !important;
  pointer-events: none;
  width: 30% !important;
  height: 30% !important;
}
.swiper-button-prev svg {
  object-fit: contain;
  transform-origin: center;
  pointer-events: none;
  width: 30% !important;
  height: 30% !important;
}
.swiper-wrapper {
  display: flex;
  align-items: center;
  justify-content: start;
}
.swiper-slide {
  button {
    font-size: 14px;
  }
}

.swiper-button-prev {
  background-color: white;
  color: black !important;
  box-shadow: 0px 0px 20px -5px gray;
  border-radius: 5rem;
  width: 35px !important;
  height: 35px !important;
}
.swiper-button-next {
  background-color: white;
  color: black !important;
  box-shadow: 0px 0px 20px -5px gray;
  border-radius: 5rem;
  height: 35px !important;
  width: 35px !important;
}
/* ... */

